--- a/src/bootstrap4-floating-label.scss
+++ b/src/bootstrap4-floating-label.scss
@@ -1,12 +1,12 @@
-/**
- * Other implementations:
- * - https://www.jquery-az.com/boots/demo.php?ex=52.0_3
- * - https://www.primefaces.org/primereact/#/inputtext
- * - https://getbootstrap.com/docs/4.1/examples/floating-labels/
- * - https://github.com/tonystar/bootstrap-float-label
- * - https://lusaxweb.github.io/vuesax/components/input.html#label-placeholder
- *   https://github.com/lusaxweb/vuesax/blob/master/src/components/vsInput/main.styl
- */
+// Other implementations:
+// - https://www.jquery-az.com/boots/demo.php?ex=52.0_3
+// - https://www.primefaces.org/primereact/#/inputtext
+// - https://getbootstrap.com/docs/4.1/examples/floating-labels/
+// - https://github.com/tonystar/bootstrap-float-label
+// - https://lusaxweb.github.io/vuesax/components/input.html#label-placeholder
+//   https://github.com/lusaxweb/vuesax/blob/v3.4.7/src/components/vsInput/main.styl
+// - https://material-ui.com/demos/text-fields/#outlined
+//   https://github.com/mui-org/material-ui/blob/v3.1.1/packages/material-ui/src/OutlinedInput/OutlinedInput.js
 
 // calc(move label at the top of the input - middle of the label text height)
 // See $input-height-inner and $input-height https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L445-L446
@@ -21,48 +21,6 @@ $label-top-position: calc(
   + #{$font-size-sm * $input-line-height * 1 / 2}
 );
 
-.form-group {
-  position: relative;
-
-  // Initial state: the label is inside the input
-  > input + label,
-  > textarea + label {
-    // Breaks flexbox
-    // "An absolutely-positioned child of a flex container does not participate in flex layout", see https://stackoverflow.com/a/41033582/990356
-    position: absolute;
-
-    // See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L241
-    transition: $transition-base;
-
-    @extend %label-inside-input;
-  }
-
-  // Initial state: hide the placeholder
-  > input::placeholder,
-  > textarea::placeholder {
-    color: transparent;
-    transition: color 0.15s linear; // See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L242
-  }
-  // Except if <label> is before <input> => not a floating label
-  > label + input::placeholder,
-  > label + textarea::placeholder {
-    color: inherit;
-  }
-
-  // When the input is focused:
-  > input:focus,
-  > textarea:focus {
-    // - show the placeholder
-    &::placeholder {
-      color: inherit;
-    }
-
-    // - move the label above the input
-    + label {
-      @extend %label-above-input;
-    }
-  }
-}
 
 %label-inside-input {
   top: 0;
@@ -70,13 +28,20 @@ $label-top-position: calc(
 
   // See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L410
   padding: calc(#{$input-padding-y} + #{$input-border-width}) calc(#{$input-padding-x} + #{$input-border-width});
-
-  // Truncate the text label if larger than the input
-  width: 100%;
-  @include text-truncate;
 }
 
-%label-above-input {
+// If a browser does not support a CSS pseudo-element, we cannot group/merge it with other CSS pseudo-elements:
+// input:focus + label, input:-webkit-autofill + label { ... } // Does not work in Firefox
+// Instead we have to ungroup/unmerge them:
+// input:focus + label { ... } // Work in Firefox
+// input:-webkit-autofill + label { ... } // Does not work in Firefox
+//
+// Sass does not allow to clone a placeholder class
+// See https://github.com/sass/sass/issues/2312
+// This is a hack:
+// - if we want to group (share CSS) => use the placeholder class
+// - if we want to ungroup (clone CSS) => use the mixin
+@mixin label-above-input {
   // Hack to hide the input border under the label
   background-color: $input-bg;
 
@@ -88,7 +53,62 @@ $label-top-position: calc(
   // Compensate .7ch padding-left
   left: calc(#{$input-padding-x} + #{$input-border-width} - .7ch);
 
-  width: initial;
-
   font-size: $font-size-sm;
 }
+
+%label-above-input {
+  @include label-above-input;
+}
+
+
+.form-group {
+  position: relative;
+
+  // Initial state: the label is inside the input
+  > input + label,
+  > textarea + label {
+    // Breaks flexbox :-/
+    // ["An absolutely-positioned child of a flex container does not participate in flex layout"](https://stackoverflow.com/a/41033582/990356)
+    position: absolute;
+
+    // Truncate the text label if larger than the input
+    max-width: 100%;
+    @include text-truncate;
+
+    // See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L241
+    transition: $transition-base;
+
+    @extend %label-inside-input;
+  }
+
+  // Initial state: hide the placeholder
+  > input::placeholder,
+  > textarea::placeholder {
+    color: transparent;
+    transition: color .15s linear; // See https://github.com/twbs/bootstrap/blob/v4.1.3/scss/_variables.scss#L242
+  }
+  // Except if <label> is before <input> => not a floating label
+  > label + input::placeholder,
+  > label + textarea::placeholder {
+    color: inherit;
+  }
+
+  // When the input is focused:
+  > input:focus,
+  > textarea:focus {
+    // - show the placeholder
+    // FYI IE hides the placeholder when the input is focused, see https://stackoverflow.com/a/24319798/990356
+    &::placeholder {
+      color: inherit;
+    }
+
+    // - move the label above the input
+    + label {
+      @extend %label-above-input;
+    }
+  }
+}
+
+@import 'webkit-autofill';
+@import 'placeholder-shown';
+@import 'value-attr';
